examples/test/testpolicy12046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12046
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key31: value18
      key28: value3
      key20: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value37
          key18: value33
      podSelector:
        matchLabels:
          key23: value6
